<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIssueDate"
                style="@style/textInputProfile"
                android:hint="@string/LIssueDate" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAccessionNo"
                style="@style/textInputProfile"
                android:hint="@string/LAccNo" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTitle"
                style="@style/textInputProfile"
                android:hint="@string/LTitle" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDueDate"
                style="@style/textInputProfile"
                android:hint="@string/LDueDate" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtReturnDate"
                style="@style/textInputProfile"
                android:hint="@string/LReturnDate" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtStatus"
                style="@style/textInputProfile"
                android:hint="@string/LStatus" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFine"
                style="@style/textInputProfile"
                android:hint="@string/LFine" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>