<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notificationlistitemhtml"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/tblNotificationMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInputLayoutProfile"
                    android:id="@+id/usernameInputLayout"
                    android:layout_marginTop="10dp"
                    >

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/textInputProfile"
                            android:id="@+id/txtSendingEmployee"
                            android:hint="@string/nFrom"
                            android:drawableLeft="@drawable/ic_user_person_24"
                            />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInputLayoutProfile"
                    android:id="@+id/usernameInputLayoutt"
                    android:layout_marginTop="10dp"
                    >

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/textInputProfile"
                            android:id="@+id/txtDepartment"
                            android:hint="@string/nDesig"
                            android:drawableLeft="@drawable/p_department_24"
                            />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInputLayoutProfile"
                    android:id="@+id/usernameInputLayouttm"
                    android:layout_marginTop="10dp"
                    >

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/textInputProfile"
                            android:id="@+id/txtMessage"
                            android:hint="@string/nMessage"
                            android:drawableLeft="@drawable/p_mail"
                            />

                </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



</RelativeLayout>